Additional attempt to fix logo sizing issue on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -28,6 +28,7 @@ $link-color: $purple; // hyperlinks
 // Logo
 .navbar-logo {
   max-height: 5vh;
+  box-sizing: border-box;
 }
 
 // Nav bar 
